--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -4,13 +4,16 @@ block content
 	h1 Create user
 
 
-	form(action="/user/create", method="POST")
+	form(action="/user/create" method="POST" enctype="multipart/form-data")
 		.form-group
-			label(for="name") name
+			label(for="name") Name
 			input#name.form-control(type="text" name="name" value=values ? values.name : '')
 		.form-group
 			label(for="phone") Phone
 			input#phone.form-control(type="text" name="phone" value=values ? values.phone : '')
+		.form-group
+			label(for="avatar") Avatar
+			input#avatar.form-control-file(type="file" name="avatar")
 
 		button.btn.btn-primary Create
 
