--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -12,11 +12,14 @@ block content
 
 	table.table
 		tr 
+			th Avatar
 			th Name
 			th Phone
 			th Action 
 		each user in users
 			tr
+				td
+					img(src= user.avatar)
 				td= user.name
 				td= user.phone
 				td
